configs/ambient/02-istio-controlplane-ambient.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    openshift.io/cluster-monitoring: "true"
